@@ -1,5 +1,5 @@
 import argparse
-from getpass import getpass
+import getpass
 import os
 import sys
 
@@ -8,16 +8,28 @@ from onepassword import Keychain
 DEFAULT_KEYCHAIN_PATH = "~/Dropbox/1Password.agilekeychain"
 
 class CLI(object):
-    def __init__(self, arguments):
+    """
+    The 1pass command line interface.
+    """
+
+    def __init__(self, stdout=sys.stdout, stderr=sys.stderr,
+                 getpass=getpass.getpass, arguments=sys.argv[1:]):
+        self.stdout = stdout
+        self.stderr = stderr
+        self.getpass = getpass
         self.arguments = self.argument_parser().parse_args(arguments)
 
     def run(self):
+        """
+        The main entry point, performs the appropriate action for the given
+        arguments.
+        """
         keychain = Keychain(self.arguments.path)
         while keychain.locked:
             try:
-                keychain.unlock(getpass("Master password: "))
+                keychain.unlock(self.getpass("Master password: "))
             except KeyboardInterrupt:
-                print("")
+                self.stdout.write("\n")
                 sys.exit(0)
 
         if self.arguments.fuzzy:
@@ -26,10 +38,12 @@ class CLI(object):
             item = keychain.item(self.arguments.item)
 
         if item is not None:
-            print(item.password)
+            self.stdout.write("%s\n" % item.password)
         else:
-            sys.stderr.write("Could not find a item named '%s'\n" % self.arguments.item)
-            sys.exit(1)
+            self.stderr.write("1pass: Could not find an item named '%s'\n" % (
+                self.arguments.item,
+            ))
+            sys.exit(os.EX_DATAERR)
 
     def argument_parser(self):
         parser = argparse.ArgumentParser()
